--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,12 @@
 	<version>1.0</version>
 	<name>JavaWebApp</name>
 	<url>http://maven.apache.org</url>
-	<properties>
+<!-- 	<properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <sonar.language>java</sonar.language>
-<sonar.login>admin</sonar.login>
+    <sonar.login>admin</sonar.login>
     <sonar.password>admin</sonar.password>
-  </properties>
+  </properties> -->
 	
 	<dependencies>
 		<dependency>
