--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,9 @@
 					
 		<plugins>
 			<plugin>
+              		<artifactId>maven-surefire-report-plugin</artifactId>
+                       </plugin>
+			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>2.4</version>
 				<configuration>
